Fixed form content alignment on WASH Questions block

--- a/templates/assets/css/mmp-form.css
+++ b/templates/assets/css/mmp-form.css
@@ -294,7 +294,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  margin: 0 10px;
+  margin: 0;
 }
 
 .form-row.equal-height .form-group .input-group {
